add block copyright tag

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -48,5 +48,8 @@
     {% endif %}
 </div>
 
+{% block copyright %}
+<p class="m-0 text-center text-white">Made by Code Instituters</p>
+{% endblock copyright %}
 <!-- index.html content ends here -->
 {% endblock %}
