--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,13 @@
 
         {% block content %}
         <!-- Content Goes here -->
-        {% endblock content %}
+        {% if user.is_authenticated %}
+        <p class="text-end m-3">You are logged in as {{ user }}</p>
+        {% else %}
+        <p class="text-end m-3">You are not logged in</p>
+        {% endif %}
+
+        {% endblock %}
 
     </main>
 
