--- a/templates/base.html
+++ b/templates/base.html
@@ -167,5 +167,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="{% static 'js/script.js' %}"></script>
+    {% block extras %}
+    {% endblock %}
   </body>
 </html>
